--- a/style/arcitact.css
+++ b/style/arcitact.css
@@ -1,5 +1,54 @@
  @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,800;1,600;1,700&family=Work+Sans:ital,wght@0,400;0,500;0,600;0,700;0,800;1,500&display=swap');
+ /* shared style */
 *{
+    font-family:'lato', sans-serif;
     font-family: 'Open Sans', sans-serif;
     font-family: 'Work Sans', sans-serif; 
 }
+header{
+    background: rgba(255, 144, 14, 0.10);
+    padding: 50px 240px;
+}
+nav{
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.nav-title{
+    font-size: 2.8rem;
+    font-weight: 700;
+    color: #131313;
+}
+nav > ul{
+    display: flex;
+}
+ nav li{
+    list-style: none;
+    margin-right: 30px;
+    font-weight: 500;
+    font-size: 1rem;
+ }
+ nav li a{
+    text-decoration: none;
+    color: #424242;
+ }
+ /* banner style */
+ .banner-content{
+    max-width: 800px;
+    align-items: center;
+    margin: 0 auto;
+ }
+ .banner-title{
+    font-size:4rem;
+    font-weight: 700;
+    color:#131313;
+ }
+ .banner-descrition{
+
+    color: #727272;
+ }
+ .banner{
+    justify-content: center;
+    text-align: center;
+ }
