--- a/style/arcitact.css
+++ b/style/arcitact.css
@@ -5,6 +5,15 @@
     font-family: 'Open Sans', sans-serif;
     font-family: 'Work Sans', sans-serif; 
 }
+.btn-primary{
+    color: floralwhite;
+    border-radius: 8px;
+    background-color: #ff900f;
+    padding: 20px 25px;
+    font-size: 1.20rem;
+    cursor: pointer;
+    border: 0;
+}
 header{
     background: rgba(255, 144, 14, 0.10);
     padding: 50px 240px;
@@ -51,4 +60,28 @@ nav > ul{
  .banner{
     justify-content: center;
     text-align: center;
+ }
+ .banner img{
+    margin-top:20px;
+    width: 100%;
+ }
+ /* respinsive media */
+ @media screen and (max-width:576px) {
+    header{
+        padding: 20px;
+    }
+    nav{
+        flex-direction: column;
+    }
+    
+ }
+ /* tabled and mediam divice */
+ @media screen and (min-width:576px) and (max-width:960px) {
+    header{
+        padding: 50px;
+    }
+    nav{
+        flex-direction: column;
+    }
+    
  }
