--- a/style/arcitact.css
+++ b/style/arcitact.css
@@ -65,6 +65,37 @@ nav > ul{
     margin-top:20px;
     width: 100%;
  }
+
+ /* team style */
+.teams-container{
+    display: flex;
+    align-items: center;
+}
+.teams-img-container{
+
+    display: grid;
+    grid-template-columns: repeat(2  ,1fr);
+    gap: 1.5rem;
+}
+.teams-content{
+    padding-left: 70px;
+    padding-right: 70px;
+}
+.teams-title{
+    font-size: 2.8rem;
+}
+.teams-title .quick-list{
+    color: #727272;
+    font-weight: 500;
+}
+.teams-title .fem{
+    color: #ff900f;
+    font-weight: 700;
+}
+
+
+
+
  /* respinsive media */
  @media screen and (max-width:576px) {
     header{
@@ -84,4 +115,9 @@ nav > ul{
         flex-direction: column;
     }
     
+ }
+ /* main section style  */
+ main{
+    max-width: 1440px;
+    margin: 0 auto;
  }
