--- a/style/arcitact.css
+++ b/style/arcitact.css
@@ -92,8 +92,29 @@ nav > ul{
     color: #ff900f;
     font-weight: 700;
 }
+/* fact- section */
 
-
+.facts-card-container{
+    display: flex;
+    justify-content: space-around;
+}
+.facts-card-container .card{
+    border-radius: 8px;
+border: 1px solid #FF900E;
+text-align: center;
+padding: 30px 30px;
+}
+.facts-card-container .card-title{
+    font-weight: 600;
+    font-size: 1.25rem;
+    margin-top: 5px;
+}
+.facts-card-container .card-stats{
+    font-size: 2.8rem;
+    color: #424242;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
 
 
  /* respinsive media */
