--- a/style/arcitact.css
+++ b/style/arcitact.css
@@ -116,6 +116,20 @@ padding: 30px 30px;
     margin-bottom: 10px;
 }
 
+/* sponsors section */
+.sponsors{
+   text-align: center;
+}
+.sponsors-img-container{
+display: flex;
+justify-content: space-evenly;
+align-items:center;
+gap: 20px;
+
+}
+.sponsors-img-container img{
+    width: 165px;
+}
 
  /* respinsive media */
  @media screen and (max-width:576px) {
@@ -124,25 +138,45 @@ padding: 30px 30px;
     }
     nav , 
     .teams-container
+    
     {
         flex-direction: column;
     }
     .teams-img-container{
         grid-template-columns: 1fr;
     }
-    .teams-content{
+    .teams-content , .facts-card-container{
         padding-left: 20px;
         padding-right: 20px;
     }
-    
+    .facts-card-container{
+        gap: 20px;
+    }
+    .facts-card-container{
+        flex-direction: column;
+    }
+    .sponsors-img-container{
+        flex-direction: column;
+    }
  }
+ /* sponsors section */
+ .sponsors{
+    text-align: center;
+ }
+ .sponsors-img-container{
+display: flex;
+justify-content: space-evenly;
+
+ }
+
  /* tabled and mediam divice */
  @media screen and (min-width:576px) and (max-width:960px) {
     header{
         padding: 50px;
     }
     nav,
-    .teams-container 
+    .teams-container ,
+    .sponsors-img-container
     {
         flex-direction: column;
     }
