--- a/style/arcitact.css
+++ b/style/arcitact.css
@@ -115,7 +115,35 @@ padding: 30px 30px;
     margin-top: 10px;
     margin-bottom: 10px;
 }
+/* feature secton */
+.features{
+    margin-top: 130px;
+    display: flex;
+    gap: 100px;
+}
+.feature-content .card{
+    padding: 30px;
+    margin-bottom: 20px;
+    border-radius: 8px;
+    background: #FFF;
+    box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06); 
+}
+.features .section-title{
+    border-left: 5px solid #FF900E;
+    padding-left: 20px;
+}
+.ten-year-badge{
+    border-radius: 8px ;
+    background: #FF900E;
+    color: #FFF;
+    width:342px ;
+    padding: 30px;
+}
+.ten-year-badge .h2{
+    font-size: 4rem;
 
+
+}
 /* sponsors section */
 .sponsors{
    text-align: center;
@@ -167,6 +195,17 @@ gap: 20px;
 display: flex;
 justify-content: space-evenly;
 
+ }
+ /* footer section */
+ .footers{
+    text-align: center;
+    justify-content: center;
+    width: 1440px;
+height: 100px;
+border-radius: 8px;
+align-items: center;
+padding: 0px 240px;
+background: #FFF4E7;
  }
 
  /* tabled and mediam divice */
