--- a/style/arcitact.css
+++ b/style/arcitact.css
@@ -138,10 +138,20 @@ padding: 30px 30px;
     color: #FFF;
     width:342px ;
     padding: 30px;
+    text-align: center;
+    position: relative;
+    bottom: 100px;
+}
+.feature-img img{
+    height: 90%;
+    margin-left:100px;
 }
 .ten-year-badge .h2{
     font-size: 4rem;
-
+    margin: 0;
+}
+.ten-year-badge .p{
+    font-size: 1.5rem;
 
 }
 /* sponsors section */
@@ -159,34 +169,6 @@ gap: 20px;
     width: 165px;
 }
 
- /* respinsive media */
- @media screen and (max-width:576px) {
-    header{
-        padding: 20px;
-    }
-    nav , 
-    .teams-container
-    
-    {
-        flex-direction: column;
-    }
-    .teams-img-container{
-        grid-template-columns: 1fr;
-    }
-    .teams-content , .facts-card-container{
-        padding-left: 20px;
-        padding-right: 20px;
-    }
-    .facts-card-container{
-        gap: 20px;
-    }
-    .facts-card-container{
-        flex-direction: column;
-    }
-    .sponsors-img-container{
-        flex-direction: column;
-    }
- }
  /* sponsors section */
  .sponsors{
     text-align: center;
@@ -208,6 +190,45 @@ padding: 0px 240px;
 background: #FFF4E7;
  }
 
+ /* respinsive media */
+ @media screen and (max-width:576px) {
+    header{
+        padding: 20px;
+    }
+    nav , 
+    .teams-container ,.features,
+    
+    {
+        flex-direction: column;
+    }
+    .teams-img-container{
+        grid-template-columns: 1fr;
+    }
+    .teams-content , .facts-card-container{
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+    .facts-card-container{
+        gap: 20px;
+    }
+    .facts-card-container{
+        flex-direction: column;
+    }
+    .sponsors-img-container{
+        flex-direction: column;
+    }
+    .feature-img img{
+        width: 90%;
+        margin-left: 0;
+        flex-direction:
+    }
+    .ten-year-badge{
+        position: static;
+        max-width: 300px;
+    }
+ }
+
+
  /* tabled and mediam divice */
  @media screen and (min-width:576px) and (max-width:960px) {
     header{
@@ -217,6 +238,9 @@ background: #FFF4E7;
     .teams-container ,
     .sponsors-img-container
     {
+        flex-direction: column;
+    }
+    .features{
         flex-direction: column;
     }
     
