--- a/style/arcitact.css
+++ b/style/arcitact.css
@@ -179,7 +179,7 @@ justify-content: space-evenly;
 
  }
  /* footer section */
- .footers{
+ .last-part{
     text-align: center;
     justify-content: center;
     width: 1440px;
@@ -188,6 +188,14 @@ border-radius: 8px;
 align-items: center;
 padding: 0px 240px;
 background: #FFF4E7;
+ }
+ .job{
+    color: var(--Dark-02, #424242);
+text-align: center;
+font-family: Work Sans;
+font-size: 20px;
+==font-weight: 400;
+
  }
 
  /* respinsive media */
